<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/logo"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bus_travel"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/myTickets_ua"
                android:background="@drawable/button_shape"
                android:text="My Tickets"
                android:layout_margin="3dp"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/exitAccount_ua"
                android:layout_gravity="right"
                android:background="@drawable/button_shape"
                android:text="Exit"
                android:layout_margin="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/oneWay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Switch
                android:id="@+id/voyageTypeSwitch"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/twoWay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:paddingTop="20dp"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/departureCity_ua"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/city_resoruces"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/returnCity_ua"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/city_resoruces" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:paddingTop="20dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/departureDate_ua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Departure Date"
                android:inputType="datetime" />

            <EditText
                android:id="@+id/returnDate_ua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Return Date"
                android:inputType="datetime" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dep Hour"/>
            <Spinner
                android:id="@+id/departureHour_ua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="50dp"

                android:entries="@array/hours"
                android:layout_weight="1"/>
            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ret Hour"/>
            <Spinner
                android:id="@+id/returnHour_ua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:entries="@array/hours"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/customerName"
                android:hint="@string/customer_Name"
                android:inputType="text"
                android:minWidth="180dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/customerAge"
                android:layout_gravity="center_horizontal"
                android:hint="@string/customer_Age"
                android:inputType="number"
                android:minWidth="180dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/telephoneNumber"
                android:hint="@string/telephone_Number"
                android:minWidth="180dp"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:id="@+id/gender"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/woman"
                    android:text="@string/woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/man"
                    android:text="@string/man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">
            <Button
                android:id="@+id/searchTicketButton_ua"
                android:text="@string/buy_ticket"
                android:background="@drawable/button_shape"
                android:layout_margin="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>